name:                chat-benchmark
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/chat-benchmark#readme
license:             BSD3
license-file:        LICENSE
author:              Wojciech Wiśniewski
maintainer:          wojciech.wisniewski@mobica.com
copyright:           BSD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.ListLike
                     , Data.MapLike
                     , Text.Parsing.List.Simple
                     , Text.Parsing.List.StaticInfo
                     , Text.Parsing.List.Memo
                     , Text.Parsing.List.NewMemo
                     , Text.Parsing.List.Combined
                     , Text.Parsing.Maybe.Simple
                     , Text.Parsing.Maybe.StaticInfo
                     , Text.Parsing.Generic.Simple
                     , Text.Parsing.Generic.StaticInfo
                     , Text.Parsing.Generic.MostGeneric
                     , Text.Parsing.Parser
                     , Text.Parsing.LineParser
                     , Text.Parsing.RegexParser
                     , Text.Parsing.SQLTokenizer
  other-modules:       Data.FastSet
                     , Data.Opaque
                     , Text.Parsing.StaticInfo
  ghc-options:         -O2 -threaded -rtsopts -g
  build-depends:       base
                     , charset
                     , list-tries
                     , regex-tdfa
                     , bytestring-trie
                     , data-memocombinators
                     , monad-memo
                     , containers
                     , hashable
                     , unordered-containers
                     , bytestring
                     , text
                     , attoparsec
                     , time
                     , deepseq
                     , transformers
  default-language:    Haskell2010

executable chat-benchmark-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -g
  build-depends:       base
                     , containers
                     , bytestring
                     , attoparsec
                     , network
                     , chat-benchmark
                     , criterion
  default-language:    Haskell2010

executable line-parser-benchmark-exe
  hs-source-dirs:      line-bench
  main-is:             Main.hs
  ghc-options:         -O2 -rtsopts -g
  build-depends:       base
                     , bytestring
                     , attoparsec
                     , chat-benchmark
                     , criterion
  default-language:    Haskell2010

executable regex-parser-benchmark-exe
  hs-source-dirs:      regex-bench
  main-is:             Main.hs
  ghc-options:         -O2 -rtsopts -g
  build-depends:       base
                     , bytestring
                     , attoparsec
                     , chat-benchmark
                     , criterion
  default-language:    Haskell2010

executable expression-parser-exe
  hs-source-dirs:      expr
  main-is:             Main.hs
  ghc-options:         -O2 -rtsopts -g
  build-depends:       base
                     , chat-benchmark
                     , attoparsec
                     , bytestring


source-repository head
  type:     git
  location: https://github.com/githubuser/chat-benchmark
